:bug: :art: Fixed crate name

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "spatial_sdk"
+name = "spatialos-sdk"
 version = "0.1.0"
 authors = ["Thomas Nicollet <thomas.nicollet@epitech.eu>"]
 edition = "2018"
