--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
 name = "spatialos-sdk"
-version = "0.1.0"
+version = "0.1.1"
 authors = ["Thomas Nicollet <thomas.nicollet@epitech.eu>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-spatialos-sys = { git = "https://github.com/Project-StarDust/spatialos-sys.git" }
+spatialos-sys = "0.0.4"
